--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
     </section>
 
     <!-- helping our client -->
-    <section id="client" class="md-block mt-5">
-        <div class="help container pt-4">
+    <section id="client" class="md-block mt-4">
+        <div class="help container pt-3">
             <h2 class="h2 fw-bold text-center text-white pt-5">HELPING OUR CLIENTS <br>
                 BUILD GREEN</h2>
-            <p class="small text-white text-center py-3">
+            <p class="small text-white text-center py-3 w-75 mx-auto">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
             </p>
@@ -198,33 +198,45 @@
     
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="left-cont p-2">
-                        <img src="/assets/img/help1.png" alt="" class="image-fluid">
-                        <a href="#" class="fw-bold">At vero eos et accusamus et iusto</a>
-                        <P class="small text-white">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit sed dobe eiusmod tempor incididmagna aliquautenim.
-                        </P>
+                <div class="col-md-4 px-4">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <img src="/assets/img/help1.png" alt="" class="image-fluid">
+                        </div> 
+                        <div class="col-md-10">
+                            <a href="#" class="fw-bold fs-4">At vero eos et <br> accusamus et iusto</a>
+                            <P class="small text-white pt-3">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit sed dobe eiusmod tempor incididmagna aliquautenim.
+                            </P>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="center-cont p-2">
-                        <img src="/assets/img/help2.png" alt="" class="image-fluid">
-                        <a href="#" class="fw-bold">Ut enim ad minima
-                            veniam quis nostrum</a>
-                        <P class="small text-white">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit sed dobe eiusmod tempor incididmagna aliquautenim.
-                        </P>
+                <div class="col-md-4 px-4">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <img src="/assets/img/help2.png" alt="" class="image-fluid">
+                        </div> 
+                        <div class="col-md-10">
+                            <a href="#" class="fw-bold fs-4">Ut enim ad minima <br>
+                                veniam quis nostrum</a>
+                            <P class="small text-white pt-3">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit sed dobe eiusmod tempor incididmagna aliquautenim.
+                            </P>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="right-cont p-2">
-                        <img src="/assets/img/help3.png" alt="" class="image-fluid">
-                        <a href="#" class="fw-bold">Duis aute irure dolor in
-                            reprehenderit in</a>
-                        <P class="small text-white">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit sed dobe eiusmod tempor incididmagna aliquautenim.
-                        </P>
+                <div class="col-md-4 px-4">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <img src="/assets/img/help3.png" alt="" class="image-fluid">
+                        </div> 
+                        <div class="col-md-10">
+                            <a href="#" class="fw-bold fs-4">Duis aute irure dolor in
+                                reprehenderit in</a>
+                            <P class="small text-white pt-3">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit sed dobe eiusmod tempor incididmagna aliquautenim.
+                            </P>
+                        </div>
                     </div>
                 </div>
             </div>
